; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_queue_full.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_queue_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.its_node = type { i32, i32, i64 }

@GITS_CREADR = common dso_local global i64 0, align 8
@ITS_CMD_QUEUE_NR_ENTRIES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.its_node*)* @its_queue_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @its_queue_full(%struct.its_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.its_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.its_node* %0, %struct.its_node** %3, align 8
  %6 = load %struct.its_node*, %struct.its_node** %3, align 8
  %7 = getelementptr inbounds %struct.its_node, %struct.its_node* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.its_node*, %struct.its_node** %3, align 8
  %10 = getelementptr inbounds %struct.its_node, %struct.its_node* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 %8, %11
  store i32 %12, i32* %4, align 4
  %13 = load %struct.its_node*, %struct.its_node** %3, align 8
  %14 = getelementptr inbounds %struct.its_node, %struct.its_node* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @GITS_CREADR, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @readl_relaxed(i64 %17)
  %19 = sext i32 %18 to i64
  %20 = udiv i64 %19, 4
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  %24 = load i32, i32* @ITS_CMD_QUEUE_NR_ENTRIES, align 4
  %25 = srem i32 %23, %24
  %26 = load i32, i32* %5, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %30

29:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %28
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @readl_relaxed(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
